samples/_failures_safe/1761435941_df5a93_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_0524adf8.c: In function ‘main’:
./samples/SAFE/__tmp_0524adf8.c:154:25: error: ‘de’ undeclared (first use in this function)
  154 |         printf("%d ", *(de
      |                         ^~
./samples/SAFE/__tmp_0524adf8.c:154:25: note: each undeclared identifier is reported only once for each function it appears in
./samples/SAFE/__tmp_0524adf8.c:154:27: error: expected ‘)’ at end of input
  154 |         printf("%d ", *(de
      |                        ~  ^
      |                           )
./samples/SAFE/__tmp_0524adf8.c:154:9: error: expected declaration or statement at end of input
  154 |         printf("%d ", *(de
      |         ^~~~~~
./samples/SAFE/__tmp_0524adf8.c:154:9: error: expected declaration or statement at end of input
